// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Styles matches ListGroupItem primary 1`] = `
.c0 {
  position: relative;
  display: block;
  padding: 0.75rem 1.25rem;
  border: 1px solid rgba(0,0,0,0.2);
  border-bottom: none;
  margin-bottom: -1px;
  color: #004085;
  background-color: #9cc9fb;
  border-color: rgba(0,0,0,0.2);
}

.c0:first-child {
  border-top-left-radius: 0.25rem;
  border-top-right-radius: 0.25rem;
}

.c0:last-child {
  border-bottom: 1px solid rgba(0,0,0,0.2);
  margin-bottom: 0;
  border-bottom-right-radius: 0.25rem;
  border-bottom-left-radius: 0.25rem;
}

.c0 > a,
.c0 > a:hover,
.c0 > a:focus {
  z-index: 1;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover,
.c0:focus,
.c0 > a:hover,
.c0 > a:focus {
  cursor: text;
}

<li
  className="c0"
/>
`;

exports[`Styles matches ListGroupItem primary action 1`] = `
.c0 {
  position: relative;
  display: block;
  padding: 0.75rem 1.25rem;
  border: 1px solid rgba(0,0,0,0.2);
  border-bottom: none;
  margin-bottom: -1px;
  color: #004085;
  background-color: #9cc9fb;
  border-color: rgba(0,0,0,0.2);
}

.c0:first-child {
  border-top-left-radius: 0.25rem;
  border-top-right-radius: 0.25rem;
}

.c0:last-child {
  border-bottom: 1px solid rgba(0,0,0,0.2);
  margin-bottom: 0;
  border-bottom-right-radius: 0.25rem;
  border-bottom-left-radius: 0.25rem;
}

.c0 > a,
.c0 > a:hover,
.c0 > a:focus {
  z-index: 1;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 > a,
.c0 > a:hover,
.c0 > a:focus {
  color: #004085;
}

.c0:hover,
.c0:focus,
.c0 > a:hover,
.c0 > a:focus {
  background-color: #9cc9fb;
}

.c0:hover,
.c0:focus,
.c0 > a:hover,
.c0 > a:focus {
  cursor: pointer;
}

<li
  action={true}
  className="c0"
/>
`;

exports[`Styles matches ListGroupItem primary active 1`] = `
.c0 {
  position: relative;
  display: block;
  padding: 0.75rem 1.25rem;
  border: 1px solid rgba(0,0,0,0.2);
  border-bottom: none;
  margin-bottom: -1px;
  color: #fff;
  background-color: #9cc9fb;
  border-color: rgba(0,0,0,0.2);
  background-color: #004085;
  border-color: #004085;
  z-index: 2;
}

.c0:first-child {
  border-top-left-radius: 0.25rem;
  border-top-right-radius: 0.25rem;
}

.c0:last-child {
  border-bottom: 1px solid #004085;
  margin-bottom: 0;
  border-bottom-right-radius: 0.25rem;
  border-bottom-left-radius: 0.25rem;
}

.c0 > a,
.c0 > a:hover,
.c0 > a:focus {
  z-index: 1;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover,
.c0:focus,
.c0 > a:hover,
.c0 > a:focus {
  background-color: #004085;
}

.c0:hover,
.c0:focus,
.c0 > a:hover,
.c0 > a:focus {
  cursor: text;
}

<li
  className="c0"
/>
`;
